# Browser

./: .gitignore  .memory  index.html  package-lock.json  package.json
.prd/: Browser_PRD.md
backend/: Cargo.toml  PRD_BACKEND_COMPARISON.md  README.md
backend/crates/agent_protocol/: Cargo.toml
backend/crates/agent_protocol/src/: lib.rs
backend/crates/browser_ai/: Cargo.toml
backend/crates/browser_ai/src/: lib.rs
backend/crates/browser_automation/: Cargo.toml
backend/crates/browser_automation/src/: lib.rs
backend/crates/browser_backend/: Cargo.toml
backend/crates/browser_backend/src/: main.rs
backend/crates/browser_cdp/: Cargo.toml
backend/crates/browser_cdp/src/: lib.rs
backend/crates/browser_crypto/: Cargo.toml
backend/crates/browser_crypto/src/: lib.rs
backend/crates/browser_domain/: Cargo.toml
backend/crates/browser_domain/src/: lib.rs
backend/crates/browser_policy/: Cargo.toml
backend/crates/browser_policy/src/: lib.rs  privacy.rs  readiness.rs  safety.rs
backend/crates/browser_storage/: Cargo.toml
backend/crates/browser_storage/src/: lib.rs
backend/crates/search_core/: Cargo.toml
backend/crates/search_core/src/: lib.rs  scoring.rs  tokenizer.rs
electron/: main.cjs  preload.cjs
src/: main.js
src/components/: AISidebar.js  AgentOverlay.js  BaseComponent.js  FeaturePopover.js  GenerativeWidgets.js  MenuPopover.js  NewTabPage.js  Omnibox.js  ProfilePopover.js  SettingsPanel.js  TabStrip.js  WebViewport.js  WindowsHelloModal.js
src/components/pages/: AISetupPage.js  AddressesPage.js  BookmarksPage.js  DownloadsPage.js  HistoryPage.js  PasswordsPage.js  PaymentsPage.js  ReadingListPage.js  SearchPage.js  SecurityPage.js  SettingsPage.js  ToolsPage.js  WorkspacesPage.js
src/components/pages/settings/: AboutTab.js  AppearanceTab.js  DownloadsTab.js  PerformanceTab.js  PrivacyTab.js  ProfilesTab.js  SearchTab.js  StartupTab.js  TabsTab.js
src/services/: AppState.js  BackendClient.js  BookmarksService.js  ClickCatcher.js  ContextMenuService.js  DialogEngine.js
src/styles/: animations.css  base.css  components.css  layout.css  tokens.css
src/styles/components/: ai-sidebar.css  bookmark-popup.css  bookmarks-bar.css  buttons.css  context-menu.css  dialogs.css  internal-pages.css  new-tab.css  omnibox.css  polish-layer.css  popovers.css  sidebar.css  tab-strip.css  web-viewport.css  window-controls.css
